force-app/main/default/objects/leaseworks__Asset_ESN_Staging__c/leaseworks__Asset_ESN_Staging__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Asset ESN Staging</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset ESNs Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>