force-app/main/default/objects/leaseworks__Asset_ESN_Staging__c/fields/leaseworks__ET_Current_Operation_Pl__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__ET_Current_Operation_Pl__c</fullName>
    <label>ET Current Operation Pl</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>