force-app/main/default/objects/leaseworks__Asset_ESN_Staging__c/fields/leaseworks__IsActive__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>