force-app/main/default/objects/leaseworks__Asset_ESN_Staging__c/fields/leaseworks__Last_Shop_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Last_Shop_Visit_Date__c</fullName>
    <label>Last Shop Visit Date</label>
    <length>24</length>
    <type>Text</type>
</CustomField>