force-app/main/default/objects/leaseworks__Asset_ESN_Staging__c/fields/leaseworks__Lessee_Company_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee_Company_Short_Name__c</fullName>
    <label>Lessee Company Short Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>