force-app/main/default/objects/leaseworks__Asset_ESN_Staging__c/fields/leaseworks__Limiting_Part_Cycles_Remaining__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Limiting_Part_Cycles_Remaining__c</fullName>
    <label>Limiting Part Cycles Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>