force-app/main/default/objects/leaseworks__Asset_ESN_Staging__c/fields/leaseworks__Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Serial_Number__c</fullName>
    <label>Serial Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>