force-app/main/default/objects/leaseworks__Asset_ESN_Staging__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Serial_Number__c</columns>
    <columns>leaseworks__Component_Serial_Number__c</columns>
    <columns>leaseworks__Component_Variant__c</columns>
    <columns>leaseworks__Current_Thrust__c</columns>
    <columns>leaseworks__IsActive__c</columns>
    <columns>leaseworks__Manufacturer_Company_Short_Name__c</columns>
    <columns>leaseworks__DOM__c</columns>
    <columns>leaseworks__TSN__c</columns>
    <columns>leaseworks__CSN__c</columns>
    <columns>leaseworks__TSLV__c</columns>
    <columns>leaseworks__CSLV__c</columns>
    <columns>leaseworks__Limiting_Part__c</columns>
    <columns>leaseworks__Limiting_Part_Cycles_Remaining__c</columns>
    <columns>leaseworks__Availability_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>